--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "level_advanced"
@@ -419,15 +419,44 @@
     "   \n",
     "   On a donc les conditions suivantes: $\\left\\{\\begin{matrix}\\begin{pmatrix}a\\\\ d\\end{pmatrix} = \\overrightarrow{OP_1}\\\\ \\begin{pmatrix}a+b+c\\\\ d + e +f\\end{pmatrix} = \\overrightarrow{OP_2}\\\\\\begin{pmatrix}b\\\\ e\\end{pmatrix} = \\alpha u_1 \\\\ \\begin{pmatrix}b + 2c\\\\ e + 2f\\end{pmatrix} = \\beta u_2\\end{matrix}\\right.$, où $(\\alpha, \\beta) \\: \\in \\: (\\mathbb{R}^{+*})^2$.\n",
     "   \n",
-    "   Au moins une solution existe s'il existe $(\\alpha, \\beta) \\: \\in \\: (\\mathbb{R}^{+*})^2$ tels que $\\overrightarrow{P_1P_2} = \\frac{1}{2}(\\beta u_2 + \\alpha u_1)$."
+    "   Au moins une solution existe s'il existe $(\\alpha, \\beta) \\: \\in \\: (\\mathbb{R}^{+*})^2$ tels que $\\overrightarrow{P_1P_2} = \\frac{1}{2}(\\beta u_2 + \\alpha u_1)$.      \n",
+    "   \n",
+    "   Calculer $\\alpha$ et $\\beta$, quand c'est possible, revient à résoudre un système de deux équations à deux inconnus. Pour cela, on utilise la fonction `solve` de l'extension linalg de la bibliothèque NumPy.     \n",
+    "   On note $P_i = \\begin{pmatrix} x_i \\\\ y_i \\end{pmatrix}$ et $u_i = \\begin{pmatrix} u_{i1} \\\\ u_{i2} \\end{pmatrix}$. Avec ces notations, on obtient directement les égalités $a = x_1, \\, d = y_1, \\, b = \\alpha u_{11}$ et $e = \\alpha u_{12}$. On se ramène donc à un nouveau \"système de deux équations à deux inconnus\" : $\\begin{cases} c & = & x_2 - x_1 - \\alpha u_{11} \\\\\n",
+    "                                                                                    f & = & y_2 - y_1 - \\alpha u_{12} \\end{cases}$, qui est en fait déjà résolu.     \n",
+    "              \n",
+    "Dans le cas où il est impossible de résoudre le système, on extrapole linéairement le chemin entre $P_1$ et $P_2$, c'est-à-dire, $\\forall t \\in [0,1], \\, \\gamma(t) = (1-t)P_1 + tP_2$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gamma(t, P1, P2, u1, u2):\n",
+    "    \n",
+    "    x1, y1 = P1\n",
+    "    x2, y2 = P2\n",
+    "    u11, u12 = u1\n",
+    "    u21, u22 = u2\n",
+    "    \n",
+    "    A = np.array([[u11, u21], [u21, u22]])\n",
+    "    b = 2 * np.array([x2 - x1, y2 - y1])\n",
+    "    \n",
+    "    try:\n",
+    "        alpha, beta = linalg.solve(A, b)\n",
+    "        a, d, b, e = x1, y1, alpha*u11, alpha*u12\n",
+    "        c = x2 - a - b\n",
+    "        f = y2 - d - e\n",
+    "        \n",
+    "        return np.array([[a + b*t + c*t*t],\n",
+    "                        [d + e*t + f*t*t]])\n",
+    "    \n",
+    "    except LinAlgError:\n",
+    "        return np.array([(1 - t)*x1 + t*x2],\n",
+    "                       [(1 - t)*y1 + t*y2])"
+   ]
   }
  ],
  "metadata": {
