level_curve_bis plutôt que level_curve dans la tâche 7

--- a/Courbes de niveau - Réponses.ipynb
+++ b/Courbes de niveau - Réponses.ipynb
@@ -835,7 +835,7 @@
    "source": [
     "def level_curve_ter(F, x0, y0, delta = 0.1, N = 100, eps = eps, oversampling = 1):\n",
     "    \n",
-    "    curve = level_curve(F, x0, y0, delta, N, eps)\n",
+    "    curve = level_curve_bis(F, x0, y0, delta, N, eps)\n",
     "    grad_F = grad(F)\n",
     "    n = curve.shape[1]\n",
     "    \n",
